--- a/exportwindow.ui
+++ b/exportwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>550</width>
-    <height>333</height>
+    <height>361</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -59,15 +59,33 @@
       </widget>
      </item>
      <item>
+      <widget class="QRadioButton" name="radBtnCppAndHSepFiles">
+       <property name="text">
+        <string>.h and .cpp files for each class</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QGridLayout" name="gridLayoutFileSettings">
        <item row="2" column="1">
-        <widget class="QLineEdit" name="lineEditFolderPath"/>
+        <widget class="QLineEdit" name="lineEditFolderPath">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEditFileName"/>
+        <widget class="QLineEdit" name="lineEditFileName">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="lblFileName">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>File name:</string>
          </property>
@@ -75,6 +93,9 @@
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="lblFolderPath">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Folder path:</string>
          </property>
