--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,7 +98,13 @@
    </widget>
    <addaction name="menuSettings"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QStatusBar" name="statusBar">
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+  </widget>
   <action name="actionExport_to">
    <property name="icon">
     <iconset>
