--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,6 +16,11 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>14</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>OOP pattern generator</string>
   </property>
